force-app/main/default/objects/Order_Line_Item_STNM__c/Order_Line_Item_STNM__c.object-meta.xml
<CustomObject>
    <label>Order Line Item</label>
    <nameField>
        <displayFormat>OLI - {000000}</displayFormat>
        <label>Order Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>