force-app/main/default/objects/Order_Line_Item_STNM__c/fields/Converted_to_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted to Invoice</label>
    <type>Checkbox</type>
</CustomField>