force-app/main/default/objects/Order_Line_Item_STNM__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>