force-app/main/default/objects/Order_Line_Item_STNM__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <label>GST %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>