force-app/main/default/objects/Order_Line_Item_STNM__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>