force-app/main/default/objects/Order_Line_Item_STNM__c/fields/Total_Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Amount__c</fullName>
    <label>Total Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>