force-app/main/default/objects/Order_Line_Item_STNM__c/fields/Uplift_Amount__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Amount__c</fullName>
    <label>Uplift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>